--- a/src/App.module.backup.css
+++ b/src/App.module.backup.css
@@ -1,13 +1,9 @@
 :root {
+  /* --content-left-min-width: 350px; */
 
-  /* --content-bottom-left-min-width: 350px; */
-  /* --content-bottom-left-max-width: 560px; */
-
-  --content-bottom-left-min-height: 375px;
-  --content-bottom-left-max-height: 560px;
+  /* --content-left-max-width: 560px; */
 
   --color-primary: #0381ff;
-  --gap: 1rem;
 
   --phone-background-width: 366;
   --phone-background-height: 742;
@@ -27,6 +23,7 @@
   --phone-particle-05-phone-particle-05-export-02-pdf-ratio-width: calc((130 / var(--phone-background-width)) * 100%);
   --phone-particle-05-phone-particle-05-export-03-jpg-ratio-width: calc((130 / var(--phone-background-width)) * 100%);
   --phone-particle-05-phone-particle-05-export-04-txt-ratio-width: calc((130 / var(--phone-background-width)) * 100%);
+  --gap: 1rem;
 }
 
 .main {
@@ -36,51 +33,41 @@
 .container {}
 
 .content {
-  /* scroll-snap-type: x mandatory; */
+  scroll-snap-type: x mandatory;
 
-  /* overflow-x: auto; */
-  /* overflow-y: hidden; */
-  /* display: flex; */
+  overflow-x: auto;
+  overflow-y: hidden;
+  display: flex;
 
-  /* width: 100%; */
+  width: 100%;
 }
 
 .content-item {
-  /* scroll-snap-align: center; */
+  scroll-snap-align: center;
   display: flex;
-  /* flex: 1 0 100%; */
-  /* max-width: 100%; */
+  flex: 1 0 100%;
   /*  */
-  flex-direction: column;
-  align-items: center;
-  background-color: pink;
-  /* Works with `.phone-clipper` to restrict max-height of the phone. */
-  overflow-y: hidden;
+  flex-direction: column-reverse;
+  justify-content: flex-end;
 }
 
-.content-top-right {
-  /* width: 60%; */
-  background-color: bisque;
-
-  margin: 0 7% 0 7%;
-  /*  */
-  /* width: auto; */
-  /* flex: 1 0 auto; */
-  /* max-height: fit-content; */
-}
-
-.content-bottom-left {
+.content-left {
   display: flex;
-  /* justify-content: center; */
-  /* width: 40%; */
+  justify-content: center;
+  width: 40%;
   background-color: aqua;
-  /* max-height: var(--content-bottom-left-min-height); */
-  margin: 0 17% 0 17%;
-
-  /* flex: 1 0 auto; */
   /*  */
-  /* width: auto; */
+  width: auto;
 
+}
+
+.content-right {
+  width: 60%;
+  background-color: bisque;
+  /*  */
+  width: auto;
+  flex: 1 0 auto;
+  max-height: fit-content;
 }
 
 .navigation {
@@ -117,6 +104,7 @@
   flex-direction: column;
   gap: var(--gap);
   align-items: center;
+  padding: calc(3 * var(--gap)) var(--gap) 0 var(--gap);
   text-align: center;
   height: 100%;
 }
@@ -132,7 +120,9 @@
   font-size: 2rem;
 }
 
-.feature-text p {}
+.feature-text p {
+  max-width: 560px;
+}
 
 .feature-text a {
   display: block;
@@ -140,28 +130,16 @@
   color: inherit;
   text-decoration: none;
   border: 1px solid gainsboro;
-  /* margin-top: auto; */
-  /* margin-bottom: var(--gap); */
-}
-
-.phone-clipper {
-  background-color: gold;
-
-  /* Min height is set to comply with the stupid Figma design! */
-  width: auto;
-  aspect-ratio: 1;
-  /* min-height: 300px; */
-  max-height: 38vh;
+  margin-top: auto;
+  margin-bottom: var(--gap);
 }
 
 .phone {
   position: relative;
-  /* transform: translateY(35%); */
+  transform: translateY(35%);
   width: fit-content;
   /*  */
   /* transform: translateY(5%); */
-  /* max-height: 310px; */
-  /* overflow: hidden; */
 }
 
 .phone-front {
@@ -170,8 +148,8 @@
 
 .phone-background {
   position: relative;
-  /* `flex` layout implies the `fit-content` but I'll keep it here as a backup. */
   width: fit-content;
+  /* `flex` layout implies this but I'll keep it here. */
   border-radius: calc(2 * var(--gap));
   overflow: hidden;
 }
@@ -199,14 +177,14 @@
 }
 
 .phone-particle-02-sign-01-left {
-  top: 33%;
-  left: -25%;
+  top: 35%;
+  left: -27%;
   width: var(--phone-particle-02-sign-01-left-ratio-width);
 }
 
 .phone-particle-02-sign-02-right {
-  top: 18%;
-  right: -22%;
+  top: 21%;
+  right: -36%;
   width: var(--phone-particle-02-sign-02-right-ratio-width);
 }
 
@@ -268,36 +246,4 @@
   top: 43%;
   right: -6%;
   width: var(--phone-particle-05-phone-particle-05-export-04-txt-ratio-width);
-}
-
-@media (width >=700px) {
-  body {
-    /* font-size: 1.125rem; */
-  }
-
-  .content-item {
-    flex-direction: row-reverse;
-    align-items: normal;
-    /* justify-content: flex-end; */
-  }
-
-  .content-bottom-left {
-    margin: 0 7% 0 14%;
-    /* margin: 0; */
-    /* flex: 1 0 auto; */
-    /* min-width: 30%; */
-    width: 26%;
-  }
-
-  .content-top-right {
-    margin: 0 9% 0 5%;
-    /* margin: 0; */
-    width: 39%;
-  }
-
-  .phone-clipper {
-    /* Min height is set to comply with the stupid Figma design! */
-    /* min-height: 478px; */
-    /* max-height: 42vh; */
-  }
 }
