--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,3 +1,99 @@
 .main {
   display: block;
+  display: flex;
+  flex-direction: column;
+
+  /* padding-top: 200px; */
+
+  /* padding-left: 400px; */
+}
+
+.test-rotate-m {
+  /* width: 100px; */
+  width: fit-content;
+
+  /* height: 100px; */
+  background-color: deeppink;
+}
+
+.test-rotate {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  /* transform-origin: 225% center; */
+
+  /* width: 100px; */
+  width: fit-content;
+
+  /* height: 100px; */
+
+  background-color: deeppink;
+
+  /* animation: rotate 1s linear forwards; */
+
+  animation: follow-path 10s infinite;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+}
+
+.container {
+  position: relative;
+
+  overflow: hidden;
+
+  width: 100%;
+  height: 300px;
+
+  background-color: azure;
+  border: 2px solid black;
+}
+
+.moving-element {
+  offset-path: circle(25% at 0% 0%);
+
+  width: 80px;
+  height: 40px;
+
+  background-color: red;
+  border-radius: 40px;
+}
+
+.moving-element-animation {
+  animation: move 1s linear;
+}
+
+@keyframes move {
+  0% {
+    offset-distance: 0%;
+    offset-rotate: 0deg;
+  }
+  
+  100% {
+    offset-distance: 25%;
+    offset-rotate: 45deg;
+  }
+}
+
+.box {
+  position: relative;
+  width: fit-content;
+}
+
+.x {
+  position: absolute;
+  top: 0;
+  left: 0;
+  offset-path: path(
+    'M 239 17 C 142 17 48.5 103 48.5 213.5 C 48.5 324 126 408 244 408 C 362 408 412 319 412 213.5 C 412 108 334 68.5 244 68.5 C 154 68.5 102.68 135.079 99 213.5 C 95.32 291.921 157 350 231 345.5 C 305 341 357.5 290 357.5 219.5 C 357.5 149 314 121 244 121 C 174 121 151.5 167 151.5 213.5 C 151.5 260 176 286.5 224.5 286.5 C 273 286.5 296.5 253 296.5 218.5 C 296.5 184 270 177 244 177 C 218 177 197 198 197 218.5 C 197 239 206 250.5 225.5 250.5 C 245 250.5 253 242 253 218.5'
+  );
+
+  width: 50px;
+  height: 50px;
+
+  background: white;
+  border-radius: 10px;
 }
