Added click listeners and show/hide behavior for the nav & content items
- Added CSS `aspect-ratio` controls to images to prevent FOUC on phone background
- Reorganized `Feature` type for click handlers
- Added the same background to the `.content` container to hide gray background on transitions

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -11,6 +11,8 @@
   --content-top-right-max-width-desktop: 560px;
   --phone-clipper-width: 225px;
   --phone-clipper-width-desktop: 375px;
+  --phone-background-min-width: 225px;
+  --phone-background-min-width-desktop: 375px;
 
   /* --phone-clipper-height: 300px; */
 
@@ -39,6 +41,8 @@ body {
   overflow-x: auto;
   display: flex;
   width: 100%;
+  /* This is added not to show gray background in-between opcity transitions. */
+  background-color: var(--color-content-background);
 }
 
 .content-item {
@@ -67,7 +71,7 @@ body {
   /* background-color: bisque; */
 }
 
-/* .content-bottom-left {
+/* .content-bottom-left {  
   background-color: aqua;
 } */
 
@@ -99,6 +103,10 @@ body {
   background-color: white;
 }
 
+.navigation-button.active {
+  background-color: var(--color-link-active);
+}
+
 /* .navigation-button-icon {} */
 
 .navigation-button-text {
@@ -118,7 +126,10 @@ body {
   /* background-color: crimson; */
 }
 
-/* .phone-background {} */
+.phone-background > img {
+  aspect-ratio: 1 / 2;
+  min-width: var(--phone-background-min-width);
+}
 
 .feature-text {
   display: flex;
@@ -273,6 +284,10 @@ body {
 
   .phone-clipper {
     width: var(--phone-clipper-width-desktop);
+  }
+
+  .phone-background > img {
+    min-width: var(--phone-background-min-width-desktop);
   }
 
   .feature-text {
